SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/AllocatedBudget_USD_Formula__c.field-meta.xml
<CustomField>
        <fullName>AllocatedBudget_USD_Formula__c</fullName>
        <formula>ROUND(AllocatedBudget_USD_Hidden__c, 2)</formula>
        <label>MP Allocated Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>