SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Budget__c.field-meta.xml
<CustomField>
        <fullName>Budget__c</fullName>
        <label>MP Budget</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>