SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Budget_Changed_From_Transfer__c.field-meta.xml
<CustomField>
        <fullName>Budget_Changed_From_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System use only. Helps system determine when to capture a Budget Audit Log for Marketing Plans.</description>
        <label>Budget Changed From Transfer</label>
        <type>Checkbox</type>
    </CustomField>