SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Budget_USD_Formula__c.field-meta.xml
<CustomField>
        <fullName>Budget_USD_Formula__c</fullName>
        <formula>ROUND(Budget_USD_Hidden__c, 2)</formula>
        <label>MP Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>