SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/CampaignBalance__c.field-meta.xml
<CustomField>
        <fullName>CampaignBalance__c</fullName>
        <description>(MP Budget - Campaign Budget) if Record Type equals "Campaigns Allowed - Editable" or "Campaigns Allowed - Not Editable".</description>
        <formula>IF((CONTAINS(RecordType.Name, "Campaigns Allowed - Editable")),( Budget__c - CampaignBudget__c), 
	IF((CONTAINS(RecordType.Name, "Campaigns Allowed - Not Editable")), ( Budget__c - CampaignBudget__c), null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MP Budget - Campaign Budget.</inlineHelpText>
        <label>Campaign Unallocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>