SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/CampaignBudgetHidden__c.field-meta.xml
<CustomField>
        <fullName>CampaignBudgetHidden__c</fullName>
        <description>Sum of all child Campaigns Budgets. This field is hidden on the record and used to populate the "Campaign Budget" field.</description>
        <label>Campaign Allocated Budget Hidden</label>
        <summarizedField>Campaign__c.PlannedCampaignSpend_USD_Hidden__c</summarizedField>
        <summaryForeignKey>Campaign__c.ParentMarketingPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>