SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Comments__c.field-meta.xml
<CustomField>
        <fullName>Comments__c</fullName>
        <description>Free form text field to allow for comments on any updates made to the Marketing Plan budgets</description>
        <inlineHelpText>Comment field for any updates made to budget.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </CustomField>