SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Division__c.field-meta.xml
<CustomField>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>__</fullName>
                </value>
                <value>
                    <fullName>____</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Activation Kits</fullName>
                </value>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>AFL</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>AGENCY FEES</fullName>
                </value>
                <value>
                    <fullName>American Stillhouse</fullName>
                </value>
                <value>
                    <fullName>ATL</fullName>
                </value>
                <value>
                    <fullName>Auchentoshan &amp; Ale</fullName>
                </value>
                <value>
                    <fullName>Bartender Engagement</fullName>
                </value>
                <value>
                    <fullName>Bourbon Legends Division</fullName>
                </value>
                <value>
                    <fullName>BOURBON OFF PREMISE GIFTING</fullName>
                </value>
                <value>
                    <fullName>BOURBON OFF PREMISE GWP</fullName>
                </value>
                <value>
                    <fullName>Brand Ambassadors</fullName>
                </value>
                <value>
                    <fullName>Brand BTL Focus</fullName>
                </value>
                <value>
                    <fullName>Brand Education</fullName>
                </value>
                <value>
                    <fullName>Brand experiential</fullName>
                </value>
                <value>
                    <fullName>BSI TRADE EVENT</fullName>
                </value>
                <value>
                    <fullName>BTL</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>CC Summer</fullName>
                </value>
                <value>
                    <fullName>CC SUMMER/TENNIS</fullName>
                </value>
                <value>
                    <fullName>CC Winter</fullName>
                </value>
                <value>
                    <fullName>CC WINTER/BAD SWEATER</fullName>
                </value>
                <value>
                    <fullName>Central Division</fullName>
                </value>
                <value>
                    <fullName>Central Regional Programming Division</fullName>
                </value>
                <value>
                    <fullName>Cinco Division</fullName>
                </value>
                <value>
                    <fullName>Cocktail Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>