SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/LYEndingBudget__c.field-meta.xml
<CustomField>
        <fullName>LYEndingBudget__c</fullName>
        <label>LY Ending Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>