SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/LYMarketingPlanName__c.field-meta.xml
<CustomField>
        <fullName>LYMarketingPlanName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of LY Marketing Plan.</description>
        <label>LY Marketing Plan Name</label>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipLabel>Marketing Plans (LY Marketing Plan)</relationshipLabel>
        <relationshipName>Marketing_Plans1</relationshipName>
        <type>Lookup</type>
    </CustomField>