SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/MP_Level__c.field-meta.xml
<CustomField>
        <fullName>MP_Level__c</fullName>
        <description>Level in the Hierarchy the Marketing Plan Exists in</description>
        <formula>IF(NOT(ISBLANK(ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.Name)), "6",
IF(NOT(ISBLANK(ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.Name)), "5",
IF(NOT(ISBLANK(ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.Name)), "4",
IF(NOT(ISBLANK(ParentMarketingPlan__r.ParentMarketingPlan__r.Name)), "3",
IF(NOT(ISBLANK(ParentMarketingPlan__r.Name)), "2",
"1"
)))))</formula>
        <inlineHelpText>Level in the Hierarchy the Marketing Plan Exists in</inlineHelpText>
        <label>Marketing Plan Level</label>
        <type>Text</type>
    </CustomField>