SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Next_IO_Sequence__c.field-meta.xml
<CustomField>
        <fullName>Next_IO_Sequence__c</fullName>
        <description>Stores the next available IO ending sequence for all the campaigns under this Marketing Plan. Used by system to auto-generate IO Codes on Campaigns.</description>
        <label>Next IO Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>