SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Program__c.field-meta.xml
<CustomField>
        <fullName>Program__c</fullName>
        <label>Programs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JB AFL - ATL - RTD</fullName>
                </value>
                <value>
                    <fullName>JB AFL - BTL - RTD</fullName>
                </value>
                <value>
                    <fullName>JB High ABV - BTL</fullName>
                </value>
                <value>
                    <fullName>JB Black Focus - ATL - RTD</fullName>
                </value>
                <value>
                    <fullName>JB Black Focus - BTL - RTD</fullName>
                </value>
                <value>
                    <fullName>JB Make Hist - ATL - RTD</fullName>
                </value>
                <value>
                    <fullName>JB Make Hist - BTL - RTD</fullName>
                </value>
                <value>
                    <fullName>JB Misc - ATL</fullName>
                </value>
                <value>
                    <fullName>JB NPD - ATL</fullName>
                </value>
                <value>
                    <fullName>JB Advocacy OP - ATL - RTD</fullName>
                </value>
                <value>
                    <fullName>JB Advocacy OP - BTL - RTD</fullName>
                </value>
                <value>
                    <fullName>JB Pendulum -BTL - RTD</fullName>
                </value>
                <value>
                    <fullName>JB Sum On Pack - ATL</fullName>
                </value>
                <value>
                    <fullName>JB Sum On Pack - BTL</fullName>
                </value>
                <value>
                    <fullName>JB Activation Kits - BTL</fullName>
                </value>
                <value>
                    <fullName>JB AFL - ATL - FBS</fullName>
                </value>
                <value>
                    <fullName>JB AFL - BTL - FBS</fullName>
                </value>
                <value>
                    <fullName>JB Agency -ATL</fullName>
                </value>
                <value>
                    <fullName>JB Gifting - BTL</fullName>
                </value>
                <value>
                    <fullName>JB Highball - BTL</fullName>
                </value>
                <value>
                    <fullName>JB TM - BTL</fullName>
                </value>
                <value>
                    <fullName>JB Black Focus -ATL</fullName>
                </value>
                <value>
                    <fullName>JB Black Focus - BTL</fullName>
                </value>
                <value>
                    <fullName>JB Make Hist - ATL -FBS</fullName>
                </value>
                <value>
                    <fullName>JB Make Hist - BTL - FBS</fullName>
                </value>
                <value>
                    <fullName>JB Advocacy OP - ATL - FBS</fullName>
                </value>
                <value>
                    <fullName>JB Advocacy OP - BTL - FBS</fullName>
                </value>
                <value>
                    <fullName>JB Pendulum -BTL - FBS</fullName>
                </value>
                <value>
                    <fullName>JB Research - ATL</fullName>
                </value>
                <value>
                    <fullName>JB Research - BTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>