SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Region__c.field-meta.xml
<CustomField>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>__</fullName>
                </value>
                <value>
                    <fullName>8 Year Old Launch &amp; Refresh</fullName>
                </value>
                <value>
                    <fullName>8YO</fullName>
                </value>
                <value>
                    <fullName>AFL</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Ardmore</fullName>
                </value>
                <value>
                    <fullName>ATL</fullName>
                </value>
                <value>
                    <fullName>Auctober</fullName>
                </value>
                <value>
                    <fullName>Barrel List</fullName>
                </value>
                <value>
                    <fullName>Beer Festival</fullName>
                </value>
                <value>
                    <fullName>Black Focus</fullName>
                </value>
                <value>
                    <fullName>Bowmore</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Central Region</fullName>
                </value>
                <value>
                    <fullName>Central Regional Programming</fullName>
                </value>
                <value>
                    <fullName>Chita</fullName>
                </value>
                <value>
                    <fullName>Control State Region</fullName>
                </value>
                <value>
                    <fullName>Control States &amp; NA Region</fullName>
                </value>
                <value>
                    <fullName>Control States Region</fullName>
                </value>
                <value>
                    <fullName>Easter Program</fullName>
                </value>
                <value>
                    <fullName>East Region</fullName>
                </value>
                <value>
                    <fullName>Experimental Platform</fullName>
                </value>
                <value>
                    <fullName>FBS</fullName>
                </value>
                <value>
                    <fullName>Footy</fullName>
                </value>
                <value>
                    <fullName>Franchise Region</fullName>
                </value>
                <value>
                    <fullName>Gifting</fullName>
                </value>
                <value>
                    <fullName>Global Insights</fullName>
                </value>
                <value>
                    <fullName>Global Marketing</fullName>
                </value>
                <value>
                    <fullName>Highball</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>