SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Related_Program__c.field-meta.xml
<CustomField>
        <fullName>Related_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program related to this marketing plan</description>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>National_Priority</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </CustomField>