SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/SAP_Controlling_Area__c.field-meta.xml
<CustomField>
        <fullName>SAP_Controlling_Area__c</fullName>
        <label>SAP Controlling Area</label>
        <length>4</length>
        <type>Text</type>
    </CustomField>