SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Territory__c.field-meta.xml
<CustomField>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Tags__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Territory</value>
            </filterItems>
            <filterItems>
                <field>Tags__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </CustomField>