SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/UnallocatedBudget__c.field-meta.xml
<CustomField>
        <fullName>UnallocatedBudget__c</fullName>
        <description>(MP Budget - MP Allocated Budget) if Record Type equals "Campaigns Prohibited - Editable" or "Campaigns Prohibited - Not Edible".</description>
        <formula>IF((CONTAINS(RecordType.Name, "Campaigns Prohibited - Editable")),(Budget__c  -  AllocatedBudget__c), IF((CONTAINS(RecordType.Name,  "Campaigns Prohibited - Not Editable")),(Budget__c  -  AllocatedBudget__c), null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MP Budget - MP Allocated Budget.</inlineHelpText>
        <label>MP Unallocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>