SFUSA/force-app/main/default/objects/MarketingPlan__c/fields/Year__c.field-meta.xml
<CustomField>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                    <default>true</default>
                    <label>2020</label>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>