SFUSA/force-app/main/default/objects/MarketingPlan__c/recordTypes/Campaigns_Allowed_Editable.recordType-meta.xml
<RecordType>
        <fullName>Campaigns_Allowed_Editable</fullName>
        <active>false</active>
        <description>Marketing Plan is editable and allows for Campaigns.</description>
        <label>Campaigns Allowed - Editable</label>
    </RecordType>