SFUSA/force-app/main/default/objects/MarketingPlan__c/recordTypes/Campaigns_Allowed_Not_Editable.recordType-meta.xml
<RecordType>
        <fullName>Campaigns_Allowed_Not_Editable</fullName>
        <active>true</active>
        <description>Marketing Plan is NOT editable and allows for Campaigns.</description>
        <label>Campaigns Allowed - Not Editable</label>
    </RecordType>