SFUSA/force-app/main/default/objects/MarketingPlan__c/recordTypes/Campaigns_Prohibited_Editable.recordType-meta.xml
<RecordType>
        <fullName>Campaigns_Prohibited_Editable</fullName>
        <active>false</active>
        <description>Marketing Plan is editable and DOES NOT allow for Campaigns.</description>
        <label>Campaigns Prohibited - Editable</label>
    </RecordType>