SFUSA/force-app/main/default/objects/MarketingPlan__c/validationRules/Comments_Required_for_MPBudget_Update.validationRule-meta.xml
<ValidationRule>
        <fullName>Comments_Required_for_MPBudget_Update</fullName>
        <active>true</active>
        <description>A comment is required when changing a Marketing Plan Budget value.</description>
        <errorConditionFormula>and(ischanged( Budget__c ),isblank( Comments__c ),  Budget_Changed_From_Transfer__c  &lt;&gt; true)</errorConditionFormula>
        <errorMessage>A Comment is required when changing a Marketing Plan Budget value.</errorMessage>
    </ValidationRule>